# midi-nn

./: .gitignore  Midi_NN_EDA.ipynb  README.md  charts.py  convert_midi.py  create_datasets.py  data.py  generator.py  integrate.py  load_ns_file.py  losses.npy  losses.py  lstm_base.py  midi_to_ns.py  model  model.py  preprocess.py  pyproject.toml  realy.npy  reconstruct.py  res.npy  result.mid  scores.npy  script.py  train.py  train_loss.npy  transpose.py  utils.py  val_loss.npy  y.npy
.ipynb_checkpoints/: Midi_NN_EDA-checkpoint.ipynb
data/: stats.csv
docker/: dockerfile
eda/: preprocess.py
losses/: 128_0.0001_2020-10-24T19:44:38.920323.npy  128_0.0001_2020-10-24T19:48:31.583908.npy  128_0.0001_2020-10-24T19:56:55.526153.npy  128_0.0001_2020-10-24T20:43:50.354072.npy  128_0.0001_2020-10-24T21:19:10.063252.npy  128_1e-05_2020-10-24T20:03:12.897842.npy  128_1e-05_2020-10-24T20:27:55.478710.npy  128_1e-05_2020-10-25T09:19:13.062381.npy  128_1e-05_2020-11-04T13:36:20.609446.npy  128_1e-05_2020-11-04T17:54:50.556564.npy  128_1e-05_2020-11-04T18:59:55.256565.npy  128_1e-05_2020-11-04T19:32:36.009503.npy  1_0.0001_2020-10-22T07:38:29.329214.npy  64_0.0001_2020-10-21T18:36:49.177498.npy  64_0.0001_2020-11-04T12:42:29.281142.npy  64_1e-05_2020-10-21T19:12:53.240208.npy  64_1e-05_2020-10-28T12:32:20.577984.npy  64_1e-05_2020-11-04T13:02:40.021744.npy  64_1e-05_2020-11-04T14:54:18.481423.npy
midi_nn/: basic.py  dataset.py  integrate.py  model.py  utils.py
midi_nn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
playback/: playback.RPP  playback.RPP-bak
(+1 files in other folders)
