[tool.poetry]
name = "midi-nn"
version = "0.1.0"
description = ""
authors = ["paul <dev@studiop.page>"]

[tool.poetry.dependencies]
python = "^3.8"
note-seq = "^0.0.2"
matplotlib = "^3.3.2"
torch = "^1.7.0"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
